--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-<html lang="tr">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YİĞİT ÖZYILMAZ</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-<h1>Hakkımızda</h1>
-
+    <h1>Yiğit Özyılmaz</h1>
+    <h2>hakkımda</h2>
+    <p>kod yazmaktan hoşlanırım</p>
+    <!---hlar başlık p de içerik paragraf--->
 </body>
 </html>
