--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <h2>hakkımda</h2>
     
     <p>kod yazmaktan hoşlanırım</p>
+
+<h2>beğendiğim filmler</h2>
+
+<img src="İmages/matrix.jpg"/>
+
     <!---hlar başlık p de içerik paragraf--->
 </body>
 </html>
