--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <h2>beğendiğim filmler</h2>
 
-<img src="İmages/matrix.jpg"/>
+<img src="images/matrix.jpg"/>
 
     <!---hlar başlık p de içerik paragraf--->
 </body>
