--- a/index.html
+++ b/index.html
@@ -14,8 +14,18 @@
     <p>kod yazmaktan hoşlanırım</p>
 
 <h2>beğendiğim filmler</h2>
-
+<li>Matrix</li>
+<li>lotr</li>
+<a href="https://www.imdb.com/title/tt0325980/"
+target="_blank">karayip korsanları</a>
+<p>diziler</p>
+<ul>
+    <li>fringe</li>
+    <li>witcher</li>
+    <li>davinci's demons</li>
+<h3>Matrix favori film serim.</h3>
 <img src="images/matrix.jpg"/>
+
 
     <!---hlar başlık p de içerik paragraf--->
 </body>
