--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <h2>beğendiğim filmler</h2>
 <li>Matrix</li>
 <li>lotr</li>
-<a href="https://www.imdb.com/title/tt0325980/"
-target="_blank">karayip korsanları</a>
+<li>karayip korsanları</li> <a href="https://www.imdb.com/title/tt0325980/"
+target="_blank">İmdb</a>
 <p>diziler</p>
 <ul>
     <li>fringe</li>
