--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 <h2>beğendiğim filmler</h2>
 <li>Matrix</li>
 <li>lotr</li>
-<li>karayip korsanları</li><a href="https://www.imdb.com/title/tt0325980/" target="_blank">İmdb</a>
-
+<li><a href="https://www.imdb.com/title/tt0325980/" target="_blank">karayip korsanları</a></li>
 <p>diziler</p>
 <ul>
     <li>fringe</li>
