--- a/tarif.html
+++ b/tarif.html
@@ -6,26 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>...Çikolata küpleri...</h1>
+<body style="background-color: #AD8B73;">
+    <h1 style="color: brown; color"><i>...Çikolata küpleri...</i></h1>
     <p>çıkolatalı ve şam fıstıklı tadımlık lezzetler yalnızca 4 malzeme ile hazırlanan çikolata küppleri , renkli kağıtlarda veya kürdan batırılarak sertvis edilir özellikle kalabalık sofralarda yer verilen çikolata küpleri, doğum günü gibi özel etkinliklerde de sunulabilir.</p>
     <p>Tarif: Abdullah Şensoy</p>
-    <p>                     kaç kişilik: 4 kişilik      hazırlama süresi: 30 dk     Pişirme süresi:10 dk </p>
-<p> Çikolata  küpleri tarifi için malzemeler</p>
+   <p>kaç kişilik: 4 kişilikhazırlama süresi:30 dk Pişirme süresi:10 dk </p> 
+<h2 style="background-color: rgb(236, 133, 35); color: rgb(255, 255, 255); width: 400px;border-radius: 50px;"> Çikolata  küpleri tarifi için malzemeler</h2>
 <ul>
 <li>350 gr bitter çikolata</li>
 <li>150 ml krema</li>
 <li>150 gr şam fıstık yada kuru yemiş</li>
-<h2>Çikolata küpleri nasıl yapılır?</h2>
+<h2 style="background-color: rgb(241, 101, 50);color: rgb(255, 255, 255);width: 320px;border-radius: 50px;">Çikolata küpleri nasıl yapılır?</h2>
 <ul>
     <ol> <li>bitter çikolatayı benmari usulü eritin</li>
+
     <li>eriyen çikolatanın üzerine krema ve tereyağı ekleyin</li>
+
 <li>şam fıstıkları havanda çok az dövüp irli ufaklı parçalayın</li>
+
 <li>ufalanan fıstıkları çikolatalı karışıma ekleyin ve karıştırın</li>
+
 <li>Hazırladığınız çikolatayı varsa alimünyum hazır bir kare tepsiye yoksa kenarlarından taşarak yağlı kağıt yerleştirdiğiniz küçük tepsiye dökün</li>
+
 <li>buz dolabında iki saat bekletin</li>
+
 <li>çikolatayı kalıptan çıkartın ve parçalayın</li>
+
+
 </ol>
-<h2>                                                                            afiyet olsun</h2>
+<h2 style="text-align: right; font-family: Verdana, Geneva, Tahoma, sans-serif;">afiyet olsun</h2>
 </body>
 </html>
